@@ -16,6 +16,7 @@ import org.hl7.fhir.instance.model.api.IPrimitiveType;
 import org.hl7.fhir.r5.model.ArtifactAssessment;
 import org.hl7.fhir.r5.model.Bundle;
 import org.hl7.fhir.r5.model.Bundle.BundleEntryComponent;
+import org.hl7.fhir.r5.model.CanonicalType;
 import org.hl7.fhir.r5.model.Extension;
 import org.hl7.fhir.r5.model.Library;
 import org.hl7.fhir.r5.model.Measure;
@@ -46,9 +47,9 @@ public class ReleaseVisitor {
             throws UnprocessableEntityException {
         if (CRMIReleaseExperimentalBehaviorCodes.NULL != experimentalBehavior
                 && CRMIReleaseExperimentalBehaviorCodes.NONE != experimentalBehavior) {
-            String nonExperimentalError = String.format(
-                    "Root artifact is not Experimental, but references an Experimental resource with URL '%s'.",
-                    resource.getUrl());
+            String nonExperimentalError =
+                    "Root artifact is not Experimental, but references an Experimental resource with URL '%s'."
+                            .formatted(resource.getUrl());
             if (CRMIReleaseExperimentalBehaviorCodes.WARN == experimentalBehavior && resource.getExperimental()) {
                 log.warn(nonExperimentalError);
             } else if (CRMIReleaseExperimentalBehaviorCodes.ERROR == experimentalBehavior
@@ -123,9 +124,9 @@ public class ReleaseVisitor {
                 releaseVersion = Optional.ofNullable(version);
             } else if (CRMIReleaseVersionBehaviorCodes.CHECK == versionBehaviorCode
                     && !replaceDraftInExisting.equals(version)) {
-                throw new UnprocessableEntityException(String.format(
-                        "versionBehavior specified is 'check' and the version provided ('%s') does not match the version currently specified on the root artifact ('%s').",
-                        version, existingVersion));
+                throw new UnprocessableEntityException(
+                        "versionBehavior specified is 'check' and the version provided ('%s') does not match the version currently specified on the root artifact ('%s')."
+                                .formatted(version, existingVersion));
             }
         }
         return releaseVersion;
@@ -142,7 +143,7 @@ public class ReleaseVisitor {
                 .forEach(artifactComment -> {
                     var ra = artifactComment.getContentFirstRep().addRelatedArtifact();
                     ra.setType(RelatedArtifactType.DERIVEDFROM)
-                            .setResource(String.format("%s|%s", rootArtifact.getUrl(), releaseVersion));
+                            .setResource("%s|%s".formatted(rootArtifact.getUrl(), releaseVersion));
                     returnEntries.add((BundleEntryComponent) PackageHelper.createEntry(artifactComment, true));
                 });
         return returnEntries;
@@ -150,11 +151,16 @@ public class ReleaseVisitor {
 
     public static void extractDirectReferenceCodes(IKnowledgeArtifactAdapter rootAdapter, Measure measure) {
         Optional<Extension> effectiveDataRequirementsExt = measure.getExtension().stream()
-                .filter(ext -> ext.getUrl().equals(Constants.CQFM_EFFECTIVE_DATA_REQUIREMENTS))
+                .filter(ext -> ext.getUrl().equals(Constants.CQFM_EFFECTIVE_DATA_REQUIREMENTS)
+                        || ext.getUrl().equals(Constants.CRMI_EFFECTIVE_DATA_REQUIREMENTS))
                 .findFirst();
         if (effectiveDataRequirementsExt.isPresent()) {
-            Reference ref = effectiveDataRequirementsExt.get().getValueReference();
-            Library effectiveDataRequirementsLib = (Library) measure.getContained(ref.getReference());
+            Library effectiveDataRequirementsLib = null;
+            if (effectiveDataRequirementsExt.get().getValue() instanceof Reference ref) {
+                effectiveDataRequirementsLib = (Library) measure.getContained("#" + ref.getReference());
+            } else if (effectiveDataRequirementsExt.get().getValue() instanceof CanonicalType canonicalType) {
+                effectiveDataRequirementsLib = (Library) measure.getContained("#" + canonicalType.getCanonical());
+            }
             if (effectiveDataRequirementsLib != null) {
                 effectiveDataRequirementsLib.getExtension().stream()
                         .filter(ext -> ext.getUrl().equals(Constants.CQF_DIRECT_REFERENCE_EXTENSION))
