@@ -17,7 +17,7 @@ import static org.opencds.cqf.fhir.test.Resources.getResourcePath;
 
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.repository.IRepository;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
@@ -144,7 +144,7 @@ public class Measure {
         public Given repositoryFor(String repositoryPath) {
             this.repository = new IgRepository(
                     FhirContext.forR4Cached(),
-                    Paths.get(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
+                    Path.of(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
 
             return this;
         }
@@ -402,9 +402,8 @@ public class Measure {
             assertEquals(
                     periodStart,
                     period.getStart(),
-                    String.format(
-                            "Expected period start of %s but was: %s",
-                            formatDate(periodStart), formatDate(period.getStart())));
+                    "Expected period start of %s but was: %s"
+                            .formatted(formatDate(periodStart), formatDate(period.getStart())));
             return this;
         }
 
@@ -413,9 +412,8 @@ public class Measure {
             assertEquals(
                     periodEnd,
                     period.getEnd(),
-                    String.format(
-                            "Expected period start of %s but was: %s",
-                            formatDate(periodEnd), formatDate(period.getEnd())));
+                    "Expected period start of %s but was: %s"
+                            .formatted(formatDate(periodEnd), formatDate(period.getEnd())));
             return this;
         }
 
@@ -904,7 +902,7 @@ public class Measure {
                 var ex = this.value().getExtensionsByUrl(EXT_CRITERIA_REFERENCE_URL);
                 if (ex.isEmpty()) {
                     throw new IllegalStateException(
-                            String.format("no evaluated resource extensions were found, and expected %s", extValueRef));
+                            "no evaluated resource extensions were found, and expected %s".formatted(extValueRef));
                 }
                 String foundRef = null;
                 for (Extension extension : ex) {
@@ -923,8 +921,8 @@ public class Measure {
             public SelectedReference hasPopulations(String... population) {
                 var ex = this.value().getExtensionsByUrl(EXT_CRITERIA_REFERENCE_URL);
                 if (ex.isEmpty()) {
-                    throw new IllegalStateException(String.format(
-                            "no evaluated resource extensions were found, and expected %s", population.length));
+                    throw new IllegalStateException("no evaluated resource extensions were found, and expected %s"
+                            .formatted(population.length));
                 }
 
                 @SuppressWarnings("unchecked")
@@ -935,9 +933,8 @@ public class Measure {
                 for (var p : population) {
                     assertTrue(
                             set.contains(p),
-                            String.format(
-                                    "population: %s was not found in the evaluated resources criteria reference extension list",
-                                    p));
+                            "population: %s was not found in the evaluated resources criteria reference extension list"
+                                    .formatted(p));
                 }
 
                 return this;
