@@ -8,7 +8,7 @@ import static org.opencds.cqf.fhir.test.Resources.getResourcePath;
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.parser.IParser;
 import ca.uhn.fhir.repository.IRepository;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
@@ -123,7 +123,7 @@ class MultiMeasure {
         public MultiMeasure.Given repositoryFor(String repositoryPath) {
             this.repository = new IgRepository(
                     FhirContext.forR4Cached(),
-                    Paths.get(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
+                    Path.of(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
             return this;
         }
 
@@ -273,8 +273,8 @@ class MultiMeasure {
                     .map(t -> (MeasureReport) t.getResource())
                     .filter(x -> x.getMeasure().equals(measureUrl))
                     .toList();
-            var msg = String.format(
-                    "measureReport count: %s, does not match for measure url: %s", reports.size(), measureUrl);
+            var msg =
+                    "measureReport count: %s, does not match for measure url: %s".formatted(reports.size(), measureUrl);
             assertEquals(count, reports.size(), msg);
 
             return this;
@@ -512,8 +512,8 @@ class MultiMeasure {
         public SelectedReference<P> hasPopulations(String... population) {
             var ex = this.value().getExtensionsByUrl(MeasureConstants.EXT_CRITERIA_REFERENCE_URL);
             if (ex.isEmpty()) {
-                throw new IllegalStateException(String.format(
-                        "no evaluated resource extensions were found, and expected %s", population.length));
+                throw new IllegalStateException(
+                        "no evaluated resource extensions were found, and expected %s".formatted(population.length));
             }
 
             @SuppressWarnings("unchecked")
@@ -524,9 +524,8 @@ class MultiMeasure {
             for (var p : population) {
                 assertTrue(
                         set.contains(p),
-                        String.format(
-                                "population: %s was not found in the evaluated resources criteria reference extension list",
-                                p));
+                        "population: %s was not found in the evaluated resources criteria reference extension list"
+                                .formatted(p));
             }
 
             return this;
