@@ -11,7 +11,7 @@ import static org.opencds.cqf.fhir.test.Resources.getResourcePath;
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.parser.IParser;
 import ca.uhn.fhir.repository.IRepository;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -67,7 +67,7 @@ public class TestQuestionnaire {
 
         public Given repositoryFor(FhirContext fhirContext, String repositoryPath) {
             this.repository = new IgRepository(
-                    fhirContext, Paths.get(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
+                    fhirContext, Path.of(getResourcePath(this.getClass()) + "/" + CLASS_PATH + "/" + repositoryPath));
             return this;
         }
 
@@ -366,10 +366,12 @@ public class TestQuestionnaire {
                 populateItems(request.getItems(questionnaireResponse));
                 expectedId = Ids.newId(
                         questionnaireResponse.getClass(),
-                        String.format(
-                                "%s-%s",
-                                request.getQuestionnaire().getIdElement().getIdPart(),
-                                request.getSubjectId().getIdPart()));
+                        "%s-%s"
+                                .formatted(
+                                        request.getQuestionnaire()
+                                                .getIdElement()
+                                                .getIdPart(),
+                                        request.getSubjectId().getIdPart()));
             }
         }
 
